--- a/pages/register.html
+++ b/pages/register.html
@@ -123,7 +123,8 @@
 
 <script>
     // Configuration
-    window.API_BASE = window.API_BASE || 'http://localhost:8000';  // Django backend URL
+    // window.API_BASE = window.API_BASE || 'http://localhost:8000';  // Django backend URL
+    window.API_BASE = window.API_BASE || 'https://school-management-backend-production.up.railway.app';
     
     // Utility Functions
     window.showAlert = function(message, type = 'danger') {
