--- a/pages/index.html
+++ b/pages/index.html
@@ -16,6 +16,7 @@
                         <p>Register and manage your school</p>
                         <a href="register.html" class="btn btn-primary me-2">Register School</a>
                         <a href="login.html" class="btn btn-outline-primary">Login</a>
+                        <p>just testing out git workflow</p>
                     </div>
                 </div>
             </div>
