frontend just finally sorted out

--- a/pages/register.html
+++ b/pages/register.html
@@ -124,7 +124,7 @@
 <script>
     // Configuration
     // window.API_BASE = window.API_BASE || 'http://localhost:8000';  // Django backend URL
-    window.API_BASE = window.API_BASE || 'https://schoolmanagement-production-1246.up.railway.app/';
+    window.API_BASE = window.API_BASE || 'https://schoolmanagement-production-1246.up.railway.app';
     
     // Utility Functions
     window.showAlert = function(message, type = 'danger') {
