--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -442,6 +442,15 @@
 {% endblock %}
 
 {% block scripts %}
+<script>
+    // Add this at the top of your dashboard.html script
+    document.addEventListener('DOMContentLoaded', function() {
+ 
+    // Continue with your existing dashboard initialization
+    window.dashboardManager = new DashboardManager();
+    window.dashboardManager.initialize();
+});
+</script>
 <script src="../static/js/utils.js"></script>
 <script src="../static/js/dashboard.js"></script>
 {% endblock %}
